# yew-demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Trunk.toml  build.sh  compose.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
.docker/: compose.yaml
.shell/: post_build.sh  pre_build.sh
assets/: demo.html  tailwind_input.css
src/: lib.rs  main.rs  route.rs
src/comp/: demo_span.rs  demo_table.rs  home.rs  mod.rs  nav_button.rs  news.rs  not_found.rs
