[package]
name = "yew_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[profile.release]
panic = "abort"   # abort unwinding on panic
codegen-units = 1 # better optimization, slower build
lto = true        # enable link time optimization
opt-level = "z"   # optimize for size

[dependencies]
web-sys = "0.3.62"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
